--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="./assets/axios/axios.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
